[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]


[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Text" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboText" type="Label" parent="Text"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.5
margin_top = -44.0
margin_right = 26.5
margin_bottom = -74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Combo: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishText" type="Label" parent="Text"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You Win!

Press Jump to continue!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsText" type="Label" parent="Text"]
margin_left = 5.0
margin_top = 20.0
margin_right = 43.0
margin_bottom = 14.0
text = "Coins:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemainingText" type="Label" parent="Text"]
margin_left = 5.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 14.0
text = "Remaining: "
__meta__ = {
"_edit_use_anchors_": false
}
